actualizacion de multimedia y cambio de correo y teléfono

--- a/multimedia.html
+++ b/multimedia.html
@@ -30,11 +30,11 @@
     </header>
     <main>
         <h1>Escucha nuestra música</h1>
-        <div id="maintext-style">
-            <section class="dossier" id="brassyole">
+        <div>
+            <section class="dossier" id="brassyole" id="maintext-style">
+                <h2>Brass y Olé - Programa de música española</h2>
                 <div class="dossier-top">
                     <div class="info-dossier">
-                        <h2>Brass y Olé</h2>
                         <ul>
                             <li>Las Bodas de Luis Alonso (G. Giménez)</li>
                             <li>Siete Canciones Populares (M. de Falla)</li>
@@ -59,10 +59,96 @@
                     </p>
                 </div>
             </section>
-            <section class="dossier" id="soundtrack">
-
+             <section class="dossier" id="soundtrack" id="maintext-style">
+                <h2>Giralda Soundtrack - Programa de música de películas</h2>
+                <div class="dossier-top">
+                    <div class="info-dossier">
+                        <ul>
+                            <li>El Oboe de Gabriel (E. Morricone)</li>
+                            <li>La Pantera Rosa (H. Mancini)</li>
+                            <li>Gladiator (H. Zimmer)</li>
+                            <li>Robin Hood (M. Kamen)</li>
+                            <li>Crimson Tide (H. Zimmer)</li>
+                            <li>James Bond (J. Barry)</li>
+                            <li>BraveHeart (J. Horner)</li>
+                            <li>Star Wars (J. Williams)</li>
+                            <li>El Señor de los Anillos (H. Shore)</li>
+                            <li>Parque Jurásico (J. Williams)</li>
+                            <li>Piratas del Caribe (H. Zimmer)</li>
+                            <li>Fantasía sobre temas de Ennio Morricone</li>
+                        </ul>
+                    </div>
+                    <div class="iframe">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Srnn1Qjzxw0?si=2FXnBNjQKkS6symm&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                        encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div>
+                    <p>Este programa es muy reconocible por el público en general debido a la gran popularidad de la música elegida, ya que con sólo escuchar unas notas ya se puede adivinar la película a la que pertenece.<br><br>
+                        Giralda Sountrack está dirigido a todo tipo de públicos, el cuál podrá trasladarse al Parque Jurásico, cabalgar en el viejo oeste o incluso surcar los mares en la codiciada Perla Negra.
+                    </p>
+                </div>
             </section>
-            
+            <section class="dossier" id="jazz" id="maintext-style">
+                <h2>Giralda Brazz - Programa de música jazz</h2>
+                <div class="dossier-top">
+                    <div class="info-dossier">
+                        <ul>
+                            <li>Just a Closer Walk with Thee (Anónimo)</li>
+                            <li>Autum Leaves (J. Kosma)</li>
+                            <li>Suite Americana - Rag time y Bossa Nova (E. Crespo)</li>
+                            <li>Tiger Rag (Dixieland Jass Band)</li>
+                            <li>Summertime (G. Gershwin)</li>
+                            <li>Misty (E. Garner)</li>
+                            <li>Amazing Grace (W. Walker)</li>
+                            <li>New York, New York (J. Kander)</li>
+                            <li>My Way (P. Anka)</li>
+                            <li>Buster Keaton Blues (M. Ottolini)</li>
+                            <li>De Cai (P. Piqueras)</li>
+                        </ul>
+                    </div>
+                    <div class="iframe">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/iaCYjayUES8?si=NM61xfauZwVr6tKG&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                        clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div>
+                    <p>"Giralda Brazz" es el recorrido que hce nuestra formación a través de la historia del jazz, desde sus orígenes en el blues hasta novedosos estilos como lo es la fusión con estilos como el flamenco.
+                    </p>
+                </div>
+            </section>
+            <section class="dossier" id="navidad" id="maintext-style">
+                <h2>NaviBrass - Programa de música navideña</h2>
+                <div class="dossier-top">
+                    <div class="info-dossier">
+                        <ul>
+                            <li>Joy to the World (Anónimo)</li>
+                            <li>Oratorio de Navidad (J.S. Bach)</li>
+                            <li>Jesus bleibet meine Freude (J.S. Bach)</li>
+                            <li>The First Noel (Anónimo)</li>
+                            <li>Sleigh Ride (L. Anderson)</li>
+                            <li>Noche de Paz (F.X. Gruber)</li>
+                            <li>Deck the Hall (Anónimo)</li>
+                            <li>Blanca Navidad (I. Berlin)</li>
+                            <li>Hallelujah (L. Cohen)</li>
+                            <li>Santa Claus is Coming to Town (J.F. Coots & H. Gillespie)</li>
+                            <li>12 days of Christmas (Anónimo)</li>
+                            <li>A Merry Christmas Party (Anónimo)</li>
+                        </ul>
+                    </div>
+                    <div class="iframe">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/AH44ekKwTbM?si=z7Fx3HvH5nZajY5_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                        encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div>
+                    <p>NaviBrass es un programa esencial de esos que mantienen la atención desde el comienzo hasta el final.<br><br>
+                        La primera parte del concierto expones las piezas de música clásica que más han significado para esta festividad.<br><br>
+                        La segunda parte desarrolla la música más popular de estas fechas con la innovación de los temas navideños versionados por el grupo "Pentatonix", con la particularidad de que contamos con la colaboracion de un batería
+                        que hace que todos vayamos al ritmo de la música
+                    </p>
+                </div>
+            </section>
         </div>     
         
     </main>
@@ -70,8 +156,8 @@
         <div class="footer-content">
             <section class="footer-section footer-contact">
                 <h4>Contacto</h4>
-                <p>E-mail: <a href="mailto:correofalso@gmail.com">correofalso@gmail.com</a></p>
-                <p>Teléfono: <a href="tel:+34666666666">+34 666666666</a></p>
+                <p>E-mail: <a href="mailto:giraldabrass@gmail.com">giraldabrass@gmail.com</a></p>
+                <p>Teléfono: <a href="tel:+34633227963">+34 633227963</a></p>
             </section>
             <section class="footer-section footer-social">
                 <h4>Redes sociales</h4>
