--- a/quinteto.html
+++ b/quinteto.html
@@ -72,8 +72,8 @@
         <div class="footer-content">
             <section class="footer-section footer-contact">
                 <h4>Contacto</h4>
-                <p>E-mail: <a href="mailto:correofalso@gmail.com">correofalso@gmail.com</a></p>
-                <p>Teléfono: <a href="tel:+34666666666">+34 666666666</a></p>
+                <p>E-mail: <a href="mailto:giraldabrass@gmail.com">giraldabrass@gmail.com</a></p>
+                <p>Teléfono: <a href="tel:+34633227963">+34 633227963</a></p>
             </section>
             <section class="footer-section footer-social">
                 <h4>Redes sociales</h4>
