--- a/integrantes.html
+++ b/integrantes.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <div class="miembros-presentacion">
-            <h1>Bienvenido a la sección de miembros de Giralda Brass</h1>
+            <h1>Nuestros miembros</h1>
         </div>
         <section class="section-member-info">
             <div class="presentacion-section div-member-info" id="trumpet1">
@@ -114,6 +114,9 @@
             </div>
             <div class="presentacion-section div-member-info" id="tuba">
                 <img>
+                <div class="imagenes-miembros">
+                    <img src="images/foto-marco.jpeg">
+                </div>
                 <div class="biografia">
                     <h2>Marco Antonio Trigueros Begines</h2>
                     <p>
