--- a/multimedia.html
+++ b/multimedia.html
@@ -79,7 +79,7 @@
                         </ul>
                     </div>
                     <div class="iframe">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Srnn1Qjzxw0?si=2FXnBNjQKkS6symm&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                        <iframe src="https://www.youtube.com/embed/Srnn1Qjzxw0?si=2FXnBNjQKkS6symm&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
                         encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                         </ul>
                     </div>
                     <div class="iframe">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/iaCYjayUES8?si=NM61xfauZwVr6tKG&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                        <iframe src="https://www.youtube.com/embed/iaCYjayUES8?si=NM61xfauZwVr6tKG&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                         clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                         </ul>
                     </div>
                     <div class="iframe">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/AH44ekKwTbM?si=z7Fx3HvH5nZajY5_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                        <iframe src="https://www.youtube.com/embed/AH44ekKwTbM?si=z7Fx3HvH5nZajY5_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
                         encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
