La he terminado de poner responsive y he cambiado los menus de ordenador. He añadido menu de hamburguesa en movil

--- a/quinteto.html
+++ b/quinteto.html
@@ -17,8 +17,8 @@
 <body>
     <header id="header-general">
         <img src="images/Giralda Brass corto.png" alt="Giralda Brass">
-        <div class="espaciador-header"></div>
         <nav class="menu">
+            <div class="menu-icono">&#9776;</div>
             <ul>
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="quinteto.html">TRAYECTORIA</a></li>
@@ -98,5 +98,6 @@
             <p>&copy; <span id="current-year">2025</span> Giralda Brass. Todos los derechos reservados.</p>
         </div>
     </footer>
+    <script src="logica.js"></script>
 </body>
 </html>
