--- a/contacto.html
+++ b/contacto.html
@@ -17,8 +17,8 @@
 <body>
     <header id="header-general">
         <img src="images/Giralda Brass corto.png" alt="Giralda Brass">
-        <div class="espaciador-header"></div>
         <nav class="menu">
+            <div class="menu-icono">&#9776;</div>
             <ul>
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="quinteto.html">TRAYECTORIA</a></li>
@@ -105,7 +105,7 @@
                     <div class="faq-answer">
                         <p>En el caso de los conciertos la duración suele ser de una hora aproximadamente.
                             <br>Normalmente consisten en unos 40/45 minutos de música y el resto del tiempo uno de nuestros
-                            integrantes.htmlntegrantes ofrece una presentación de cada una de las obras, preparando a nuestro público 
+                            integrantes ofrece una presentación de cada una de las obras, preparando a nuestro público 
                             para poder disfrutar de las obras con el apoyo de su contexto específico.<br>
                             En los eventos privados nos adaptamos a las características propias de cada situación, ya que cada 
                             actuación tiene unas características distintas. Contactad con nosotros para una información más detallada.
@@ -165,5 +165,6 @@
             <p>&copy; <span id="current-year">2025</span> Giralda Brass. Todos los derechos reservados.</p>
         </div>
     </footer>
+    <script src="logica.js"></script>
 </body>
 </html>
