--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
 
 </head>
 <body class="pagina-index">
-    <header>
-        <img src="images/logo-giralda-brass-corto.jpg" alt="Logo grande Giralda Brass" class="img-header-index-grande">
-        <div id="header-general">
-            <img src="images/Giralda Brass corto.png" alt="Logo Giralda Brass">
-            <nav class="menu">
-                <ul>
-                    <li><a href="index.html">INICIO</a></li>
-                    <li><a href="quinteto.html">QUINTETO</a></li>
-                    <li><a href="integrantes.html">MIEMBROS</a></li>
-                    <li><a href="multimedia.html">MULTIMEDIA</a></li>
-                    <li><a href="contacto.html">CONTACTO</a></li>
-                </ul>
-            </nav>
-        </div>
+    <header id="header-principal">
+        <img src="images/Giralda Brass corto.png" alt="Giralda Brass" class="imagen-header-principal">
+    </header>
+    <header id="header-general">
+         <div class="espaciador-header"></div>
+         <nav class="menu">
+             <div class="menu-icono">&#9776;</div>
+             <ul>
+                 <li><a href="index.html">INICIO</a></li>
+                <li><a href="quinteto.html">TRAYECTORIA</a></li>
+                <li><a href="integrantes.html">MIEMBROS</a></li>
+                <li><a href="multimedia.html">GRABACIONES</a></li>
+                <li><a href="contacto.html">CONTACTO</a></li>
+            </ul>
+        </nav>
     </header>
     <main class="main-index">
                     <h1>Bienvenidos a la página oficial de Giralda Brass</h1>
@@ -119,6 +120,7 @@
             <p>&copy; <span id="current-year">2025</span> Giralda Brass. Todos los derechos reservados.</p>
         </div>
     </footer>
+    <script src="codigo.js"></script>
 </body>
 
 
