--- a/integrantes.html
+++ b/integrantes.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <header id="header-general">
-        <img src="images/Giralda Brass corto.png" alt="Giralda Brass">
-        <div class="espaciador-header"></div>
+    <img src="images/Giralda Brass corto.png" alt="Giralda Brass">
         <nav class="menu">
+            <div class="menu-icono">&#9776;</div>
             <ul>
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="quinteto.html">TRAYECTORIA</a></li>
@@ -167,5 +167,6 @@
             <p>&copy; <span id="current-year">2025</span> Giralda Brass. Todos los derechos reservados.</p>
         </div>
     </footer>
+    <script src="logica.js"></script>
 </body>
 </html>
