--- a/integrantes.html
+++ b/integrantes.html
@@ -16,11 +16,11 @@
 </head>
 <body>
     <header id="header-general">
-    <img src="images/Giralda Brass corto.png" alt="Giralda Brass">
+        <img src="images/logo-giralda-brass-corto.jpg" alt="Giralda Brass" id="imagen-header-general">
+        <div class="menu-icono">&#9776;</div>
         <nav class="menu">
-            <div class="menu-icono">&#9776;</div>
-            <ul>
-                <li><a href="index.html">INICIO</a></li>
+             <ul>
+                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="quinteto.html">TRAYECTORIA</a></li>
                 <li><a href="integrantes.html">MIEMBROS</a></li>
                 <li><a href="multimedia.html">GRABACIONES</a></li>
