he reducido los titutlos en moviles, arreglado la visibilidad de moviles y tablets del menu y puyesto mejores tamaños

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="estilo.css">
 
 </head>
-<body class="pagina-index">
+<body>
     <header id="header-general">
-        <img src="images/Giralda Brass corto.png" alt="Giralda Brass" class="imagen-header-principal">
+        <img src="images/logo-giralda-brass-corto.jpg" alt="Giralda Brass" id="imagen-header-general">
         <div class="menu-icono">&#9776;</div>
         <nav class="menu">
              <ul>
@@ -43,7 +43,6 @@
                 </div>
         </section>
         <section>
-            <script src="logica.js"></script>
                     <div class="carousel-citas">
                         <blockquote class="cita">
                             <p>"Ha entusiasmado al público, con un genial recorrido por la historia del jazz, desde sus orígenes como el blues hasta estilos más innovadores como la fusión jazz-flamenco"</p>
@@ -117,7 +116,7 @@
             <p>&copy; <span id="current-year">2025</span> Giralda Brass. Todos los derechos reservados.</p>
         </div>
     </footer>
-    <script src="codigo.js"></script>
+    <script src="logica.js"></script>
 </body>
 
 
