--- a/multimedia.html
+++ b/multimedia.html
@@ -55,7 +55,7 @@
                 <div>
                     <p>En este programa nos marcamos como objetivo la consolidación de un programa musical basado en el panorama artístico español.<br><br>
                         "Brass y Olé" está constituido por nueve piezas de diferentes estilos que abarcan desde estilos tan emblemáticos como la zarzuela hasta el pasodoble, pasando por la 
-                        jota aragonesa, el zortziko vasco, y la farruca andaluza, jugando con otros estilos como la fusión de jazz-flamenco.
+                        jota, el zortziko, y la farruca, jugando con otros estilos como la fusión de jazz-flamenco.
                     </p>
                 </div>
             </section>
