he quitado paja de los miembros y he puesto el fondo de otro color

--- a/integrantes.html
+++ b/integrantes.html
@@ -40,14 +40,11 @@
                 <div class="biografia">
                     <h2>Ignacio Gallardo Leal</h2>
                     <h3>Trompeta</h3>
-                    <p>Un gran talento en el panorama musical sevillano, Ignacio Gallardo Leal es un gran <strong>trompetista</strong> con una sólida formación forjada en la prestigiosa <strong class="negrita-sin-color">Fundación Barenboim-Said</strong>. Su compromiso con la excelencia 
-                        lo llevó a obtener una beca de dicha Fundación para cursar el <strong> "V Máster en Interpretación Orquestal”</strong>, un programa de élite organizado en colaboración con la UNÍA, consolidando así sus habilidades al más alto nivel. Es miembro de Giralda Brass desde 2022<br><br>
-
-                        En el ámbito sinfónico, ha demostrado una notable versatilidad y profesionalidad, habiendo colaborado con formaciones de gran prestigio como la <strong>Orquesta Bética de Cámara</strong>, la <strong>Banda Sinfónica Municipal de Sevilla</strong>, la 
-                        <strong>Real Orquesta Sinfónica de Sevilla (ROSS)</strong> y la <strong>Orquesta Nacional de España (ONE)</strong>. Estas experiencias subrayan su capacidad para integrarse en entornos orquestales exigentes y su contribución a producciones de alto calibre.<br><br>
-
-                        Actualmente, Ignacio comparte su pasión y conocimiento como <strong class="negrita-sin-color">profesor de trompeta</strong> en el <strong>Conservatorio Profesional de Música de Osuna</strong>, formando a las nuevas generaciones de músicos. Además, mantiene una colaboración asidua 
-                        con la Real Orquesta Sinfónica de Sevilla (ROSS), lo que reafirma su relevancia y presencia activa en el circuito orquestal de primer nivel.
+                    <p>
+                        Miembro de Giralda Brass desde 2022, con una sólida formación forjada en el Conservatorio Superior de Sevilla y en la prestigiosa <strong class="negrita-sin-color">Fundación Barenboim-Said</strong>, consolidó sus habilidades al
+                         máximo nivel tras cursar el <strong> "V Máster en Interpretación Orquestal”</strong> y colaborando con célebres formaciones como lla <strong>Orquesta Bética de Cámara</strong>, la <strong>Banda Sinfónica Municipal de Sevilla</strong>, la 
+                        <strong>Real Orquesta Sinfónica de Sevilla (ROSS)</strong> y la <strong>Orquesta Nacional de España (ONE)</strong>.<br><br>
+                         Actualmente también ejerce su pasión por la docencia como profesor de trompeta en el <strong>Conservatorio Profesional de Música de Osuna</strong>, formando a las nuevas generaciones de músicos.
                     </p>
                 </div>
             </div>
@@ -56,15 +53,10 @@
                         <h2>José Valero Hermoso</h2>
                         <h3>Trompeta</h3>
                         
-                        <p> José es un pilar fundamental y <strong>miembro fundador de Giralda Brass</strong>, su talento se extiende más allá de la interpretación. Es un <strong>trompetista virtuoso y arreglista excepcional</strong>, 
-                            cuya visión ha enriquecido el repertorio de la formación. Ha colaborado con <strong class="negrita-sin-color">orquestas</strong> de renombre como la <strong>Real Orquesta Sinfónica de Sevilla (ROSS)</strong>, la <strong>Orquesta Nacional de España</strong>, la 
-                            <strong>Orquesta Bética de Cámara de Sevilla</strong>, la Banda Sinfónica Municipal de Sevilla, la Orquesta del Musical "El Médico", la Orquesta Lírica "Ópera Sur" y la Orquesta Sinfónica de la Universidad de Sevilla. <br> <br>
-
-                            Actualmente, demuestra su compromiso con la <strong class="negrita-sin-color">educación musical</strong> como profesor en la escuela municipal de Mairena del Alcor y en la escuela municipal de Tomares, inspirando a futuras generaciones de músicos. <br> <br>
-
-                            Como parte integral de Giralda Brass, ha cosechado importantes reconocimientos, incluyendo el <strong>I Premio Internacional de quintetos de viento metal "Burke y Bagley" (Seattle)</strong> y el <strong>III premio nacional de quintetos
-                             de viento metal "Valeriano Machí Esparza" (Valencia)</strong>. Su destreza ha sido consistentemente reconocida, siendo finalista en destacados concursos de música de cámara como "The Yago School Foundation" y Abate Marchena, 
-                             consolidando su estatus en el panorama musical.</p>
+                        <p>Miembro fundador de Giralda Brass, gran trompetista y arreglista, enriqueció su conocimiento musical en el Conservatorio Superior de Sevilla y a través de colaboraciones con grandes orquestas como la <strong>Real Orquesta Sinfónica de 
+                            Sevilla (ROSS)</strong>, la <strong>Orquesta Nacional de España</strong>, la <strong>Orquesta Bética de Cámara de Sevilla</strong>, la Banda Sinfónica Municipal de Sevilla, la Orquesta del Musical "El Médico", la Orquesta Lírica 
+                            "Ópera Sur" y la Orquesta Sinfónica de la Universidad de Sevilla.<br><br>
+                             Actualmente también desempeña su compromiso con la educación musical como docente en la escuela municipal de Mairena del Alcor y de Tomares, enseñando a futuros trompetistas.</p>
                 </div>
                 <div class="imagenes-miembros">
                     <img src="images/foto-valero.jpg" alt="Foto de José">
@@ -77,18 +69,13 @@
                 <div class="biografia">
                     <h2>Manuel Antonio Hernández Acosta</h2>
                     <h3>Trompa</h3>
-                    <p>Manuel es un gran <strong>trompista</strong> que domina su instrumento y se compromete en cada proyecto. Su sólida formación incluye su paso por la <strong>Academia de Estudios Orquestales de la Fundación Barenboim-Said</strong>, donde perfeccionó 
-                        su técnica en un entorno de alto nivel junto a músicos de referencia. Además, su faceta como <strong>arreglista</strong> le permite aportar una visión creativa y flexible, adaptando repertorio para distintos niveles y formatos instrumentales.
-                        Esta trayectoria le llevó a formar parte de Giralda Brass desde el año 2023<br><br>
-
-                        En el ámbito de la <strong>interpretación</strong>, ha demostrado una notable <strong class="negrita-sin-color">versatilidad y profesionalidad</strong>. Ha formado parte de destacadas agrupaciones sinfónicas como la 
-                        <strong class="negrita-sin-color">Orquesta Álvarez-Beigbeder de Jerez</strong>, la <strong class="negrita-sin-color">Orquesta Sinfónica de Triana</strong>, la <strong class="negrita-sin-color">Orquesta de la Asociación 
-                        Coral de Sevilla</strong> y la <strong class="negrita-sin-color">Compañía Sevillana de Zarzuela</strong>. Apasionado de la <strong>música de cámara</strong>, es miembro de <strong>Air Brass</strong> y ha colaborado con otras 
-                        formaciones como <strong class="negrita-sin-color">Euridice Wind Quintet</strong>.<br><br>
-
-                        En el terreno <strong>educativo</strong>, Manuel imparte clases de <strong>trompa</strong>, <strong class="negrita-sin-color">lenguaje musical</strong> e <strong class="negrita-sin-color">iniciación</strong> en 
-                        <strong>Música Viva y Creativa</strong> y en la <strong>Escuela Municipal de Música de Tomares</strong>. Además, cuenta con el <strong>Máster en Formación del Profesorado en Secundaria</strong> y compagina su labor en escuelas 
-                        con la enseñanza en institutos.
+                    <p>Miembro de Giralda Brass desde 2023, se forma en el Conservatorio Superior de Sevilla y en la <strong>Academia de Estudios Orquestales de la Fundación Barenboim-Said</strong>, donde perfeccionó 
+                        su técnica junto a grandes maestros. Además, su faceta como <strong>arreglista</strong> aporta una visión creativa y flexible al quinteto, adaptando repertorio para distintos niveles y formatos instrumentales.  Ha formado parte de 
+                        destacadas agrupaciones sinfónicas como la <strong class="negrita-sin-color">Orquesta Álvarez-Beigbeder de Jerez</strong>, la <strong class="negrita-sin-color">Orquesta Sinfónica de Triana</strong>, la 
+                        <strong class="negrita-sin-color">Orquesta de la Asociación Coral de Sevilla</strong> y la <strong class="negrita-sin-color">Compañía Sevillana de Zarzuela</strong>. Es miembro de <strong>Air Brass</strong> y ha colaborado con otras 
+                        formaciones como <strong class="negrita-sin-color">Euridice Wind Quintet</strong>.
+                        <br><br>
+                        Actualmente Manuel imparte clases en el centro <strong class="negrita-sin-color">Música Viva y Creativa</strong> y en la <strong class="negrita-sin-color">Escuela Municipal de Música de Tomares</strong>.
                     </p>
                 </div>
             </div>
@@ -97,19 +84,18 @@
                     <h2>Juan Antonio Moreno García</h2>
                     <h3>Trombón</h3>
                     
-                    <p>Considerado "un virtuoso del <strong>trombón</strong>", Juan Antonio es un <strong class="negrita-sin-color">trombonista</strong> y <strong>arreglista</strong> clave en <strong>Giralda Brass</strong>. Ha estado participando desde su fundación con el quinteto y es miembro desde el 2021.
-                        Ha ofrecido cientos de conciertos en España, Portugal y Alemania, participando en escenarios de todo tipo con <strong class="negrita-sin-color">orquestas</strong>, <strong class="negrita-sin-color">grupos de cámara</strong> y <strong class="negrita-sin-color">bandas</strong>. <br><br>
-
-                        Actualmente es <strong class="negrita-sin-color">profesor de trombón y tuba</strong> en la Escuela Manuel Navarrete León y <strong class="negrita-sin-color">profesor de música de secundaria</strong>, Juan Antonio ha desarrollado una notable carrera como instrumentista internacional y pedagogo.
-                        Previo a su integración en Giralda Brass, fue miembro en <strong>Proemium Metalls</strong>, donde llegó a la final del prestigioso concurso "Jan Koetsier Competition" y consiguió un segundo premio en el "Burke & Bugley Competition". 
-                        Ha participado en agrupaciones de prestigio como son la <strong>Orquesta Ciudad de Granada (OCG)</strong>, la <strong>Orquesta Bética de Cámara</strong>, la <strong>Orquesta Sinfónica del Estrecho (OSE)</strong> y la <strong class="negrita-sin-color">banda militar Soria 9</strong>, entre otras.<br><br>
-
-                        Juan Antonio es además un apasionado de las tecnologías, lo que ha aprovechado para unir su pasión con la música y crear un <strong>canal de <a href="https://www.youtube.com/watch?v=YDurKuaVOJ8&ab_channel=TheTrombonist" target="_blank">YouTube</a></strong> donde expone sus habilidad
-                        como arreglista y como trombonista</p>
+                    <p>Miembro de Giralda Brass desde 2021, complementa su faceta como <strong class="negrita-sin-color">trombonista</strong> con la de <strong>arreglista</strong>. Su sólida formación en el Conservatorio Superior de Granada, la ESMUC y la OJA, entre
+                        otras formaciones. Previo a su integración en Giralda Brass, fue miembro en <strong>Proemium Metals</strong>, con quienes quedó finalista del prestigioso concurso "Jan Koetsier Competition" y obtuvieron un segundo premio en el
+                         "Burke & Bugley Competition". Ha participado en agrupaciones de prestigio como son la <strong>Orquesta Ciudad de Granada (OCG)</strong>, la <strong>Orquesta Bética de Cámara</strong>, la <strong>Orquesta Sinfónica del Estrecho (OSE)</strong>
+                        y la <strong class="negrita-sin-color">banda militar Soria 9</strong>, entre otras.
+                        <br><br>
+                        Actualmente es <strong class="negrita-sin-color">profesor de trombón y tuba</strong> en la Escuela Manuel Navarrete León y <strong class="negrita-sin-color">profesor de música de secundaria</strong>.
+                        Apasionado por las tecnologías, une su pasión por ellas con la música y crea un <strong><a href="https://www.youtube.com/watch?v=YDurKuaVOJ8&ab_channel=TheTrombonist" 
+                        target="_blank">canal de YouTube</a></strong> donde expone sus habilidades como arreglista, trombonista y creador de contenido.</p>
 
                 </div>
                 <div class="imagenes-miembros">
-                <img src="images/foto-juan-antonio-cuadrado.jpg" alt="Foto de Marco">
+                <img src="images/foto-juan-antonio-cuadrado.jpeg" alt="Foto de Marco">
                 </div>
             </div>
             <div class="presentacion-section div-member-info" id="tuba">
@@ -120,18 +106,12 @@
                 <div class="biografia">
                     <h2>Marco Antonio Trigueros Begines</h2>
                     <p>
-                        Marco Antonio mostró un talento prometedor  con la <strong>tuba</strong> al ser <strong class="negrita-sin-color">becario recurrente</strong> de la <strong>Banda Sinfónica de Sevilla</strong> con tan sólo 15 años, una distinción que se mantuvo con llamadas periódicas para sus 
-                        conciertos. Su compromiso con la música orquestal se afianzó en el verano de 2009, cuando fue <strong>tuba solista de la Orquesta Joven del Aljarafe</strong> durante toda la temporada. Su trayectoria como intérprete lo ha llevado a ser 
-                        una <strong>figura clave en Giralda Brass</strong>, siendo miembro desde el año 2016.<br><br>
+                        Miembro de Giralda Brass desde 2016, se forma en el Conservatorio Superior de Sevilla y complementa sus conocimientos en formaciones como la <strong>Banda Sinfónica de Sevilla</strong> o la <strong>Orquesta Joven del Aljarafe</strong>, entre otras.
+                        Colabora activamente con la <strong>Orquesta del Aljarafe (OSA)</strong>, la <strong>Orquesta Sinfónica de Triana (OST)</strong> y la <strong>Orquesta Sinfónica del Estrecho (OSE)</strong> en todos sus conciertos.
+                        <br><br>
 
-                        Su colaboración con la <strong>Banda Sinfónica de Sevilla</strong> ha sido constante, participando en diversos conciertos destacados, incluyendo homenajes y colaboraciones bajo la dirección de importantes maestros. Desde 2017, su presencia
-                        se ha expandido al participar activamente con la <strong>Orquesta del Aljarafe</strong>, la <strong>Orquesta Sinfónica de Triana</strong> y la <strong>Orquesta 
-                        Sinfónica del Estrecho (OSE)</strong> en todos sus conciertos. Complementa su agenda con giras de <strong class="negrita-sin-color">conciertos didácticos con su quinteto</strong>, además de seguir formándose continuamente en 
-                        <strong class="negrita-sin-color">cursos nacionales e internacionales</strong>.<br><br>
-
-                        Actualmente, Marco es <strong class="negrita-sin-color">licenciado en el CSM “Manuel Castillo” de Sevilla</strong>. Su rol como <strong class="negrita-sin-color">tuba principal de la Orquesta Sinfónica de Triana</strong> y, sobre todo, su 
-                        dedicación al <strong>Quinteto de metales "Giralda Brass"</strong> consolidan su posición como intérprete. En el ámbito docente, es <strong>profesor en la escuela de música de Punta Umbría</strong>, <strong>Profesor del Conservatorio 
-                        Profesional de Osuna</strong> e interino de conservatorios de la <strong class="negrita-sin-color">Junta de Andalucía</strong>, compartiendo su experiencia con futuras generaciones.</p>
+                        Actualmente, es profesor de tuba en la <strong>escuela de música de Punta Umbría</strong>, <strong>Profesor del Conservatorio Profesional de Osuna</strong> y profesor de distintos conservatorio públicos pertenecientes
+                        a la <strong class="negrita-sin-color">Junta de Andalucía</strong>, donde forma a los futuros tubistas.</p>
                     </p>
                 </div>    
             </div>
